--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,9 @@
         <h6 class="card-subtitle mb-2 text-muted">{{ post[2] }}</h6>
         <p class="card-text">{{ post[1] }}</p>
         <a href="{{ url_for('edit', id=post[0]) }}" class="btn btn-warning btn-sm">編集</a>
-        <a href="{{ url_for('delete', id=post[0]) }}" class="btn btn-danger btn-sm">削除</a>
+        <form action="{{ url_for('delete', id=post[0]) }}" method="post" style="display:inline;">
+            <button type="submit" class="btn btn-danger btn-sm">削除</button>
+        </form>
     </div>
 </div>
 {% endfor %}
